--- a/FetchFromFile/Base.lproj/Main.storyboard
+++ b/FetchFromFile/Base.lproj/Main.storyboard
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,16 +13,147 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="FetchFromFile" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Geq-PO-WwK">
+                                <rect key="frame" x="176" y="100" width="167" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="Qmv-Lr-yXb"/>
+                                    <constraint firstAttribute="width" constant="167" id="ohD-HR-fBH"/>
+                                </constraints>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3cH-8V-Sq5">
+                                <rect key="frame" x="176" y="181" width="167" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="edv-ma-a9V">
+                                <rect key="frame" x="67" y="105" width="45" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ph Number" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yGU-dh-RB3">
+                                <rect key="frame" x="45" y="186" width="87" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email-ID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VK2-VH-yBd">
+                                <rect key="frame" x="57" y="260" width="65" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uu7-9R-l1E">
+                                <rect key="frame" x="176" y="255" width="167" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="XIU-Uj-1W0">
+                                <rect key="frame" x="165" y="336" width="45" height="30"/>
+                                <state key="normal" title="Log-In"/>
+                                <connections>
+                                    <action selector="logInButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="acK-Nb-GAd"/>
+                                    <segue destination="pKD-Nd-s6a" kind="presentation" identifier="someID" id="mc4-lI-S4x"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Yt6-We-jvk">
+                                <rect key="frame" x="187.5" y="399" width="0.0" height="0.0"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="3cH-8V-Sq5" firstAttribute="leading" secondItem="yGU-dh-RB3" secondAttribute="trailing" constant="44" id="1kz-Nz-TvE"/>
+                            <constraint firstItem="3cH-8V-Sq5" firstAttribute="top" secondItem="Geq-PO-WwK" secondAttribute="bottom" constant="51" id="2DD-vc-q2R"/>
+                            <constraint firstItem="Yt6-We-jvk" firstAttribute="top" secondItem="XIU-Uj-1W0" secondAttribute="bottom" constant="33" id="5dj-N0-KUa"/>
+                            <constraint firstItem="3cH-8V-Sq5" firstAttribute="height" secondItem="Geq-PO-WwK" secondAttribute="height" id="BHz-UN-HBj"/>
+                            <constraint firstItem="uu7-9R-l1E" firstAttribute="leading" secondItem="VK2-VH-yBd" secondAttribute="trailing" constant="54" id="LSv-f9-rbC"/>
+                            <constraint firstItem="Yt6-We-jvk" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="McD-Yy-aqq"/>
+                            <constraint firstItem="XIU-Uj-1W0" firstAttribute="top" secondItem="uu7-9R-l1E" secondAttribute="bottom" constant="51" id="NiP-e4-8MX"/>
+                            <constraint firstItem="yGU-dh-RB3" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="45" id="Nrg-o0-RzN"/>
+                            <constraint firstItem="uu7-9R-l1E" firstAttribute="top" secondItem="3cH-8V-Sq5" secondAttribute="bottom" constant="44" id="Q7r-Yh-hFU"/>
+                            <constraint firstItem="Geq-PO-WwK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="80" id="Qjo-zs-6uX"/>
+                            <constraint firstItem="yGU-dh-RB3" firstAttribute="top" secondItem="edv-ma-a9V" secondAttribute="bottom" constant="60" id="REo-2P-yG3"/>
+                            <constraint firstItem="edv-ma-a9V" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="67" id="dQw-9X-c55"/>
+                            <constraint firstItem="3cH-8V-Sq5" firstAttribute="width" secondItem="Geq-PO-WwK" secondAttribute="width" id="fq4-QW-WEK"/>
+                            <constraint firstItem="uu7-9R-l1E" firstAttribute="height" secondItem="3cH-8V-Sq5" secondAttribute="height" id="gCQ-UQ-K50"/>
+                            <constraint firstItem="Geq-PO-WwK" firstAttribute="leading" secondItem="edv-ma-a9V" secondAttribute="trailing" constant="64" id="gqd-aH-R6u"/>
+                            <constraint firstItem="uu7-9R-l1E" firstAttribute="width" secondItem="3cH-8V-Sq5" secondAttribute="width" id="hLb-zk-DVT"/>
+                            <constraint firstItem="VK2-VH-yBd" firstAttribute="top" secondItem="yGU-dh-RB3" secondAttribute="bottom" constant="53" id="idb-k5-RbU"/>
+                            <constraint firstItem="XIU-Uj-1W0" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="nWj-6l-jSX"/>
+                            <constraint firstItem="edv-ma-a9V" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="85" id="oXV-Wx-rt0"/>
+                            <constraint firstItem="VK2-VH-yBd" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="57" id="z6d-RT-gLT"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="Wms-Yr-J7p"/>
+                    <connections>
+                        <outlet property="emailIDTextFiled" destination="uu7-9R-l1E" id="tiv-XU-aBe"/>
+                        <outlet property="nameTextFiled" destination="Geq-PO-WwK" id="SJ0-H8-Yzo"/>
+                        <outlet property="phNumberTextFiled" destination="3cH-8V-Sq5" id="xYy-N3-nl4"/>
+                        <outlet property="resultLabel" destination="Yt6-We-jvk" id="RKo-S5-rdR"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="663.20000000000005" y="133.5832083958021"/>
+        </scene>
+        <!--Details-->
+        <scene sceneID="zVa-SX-REW">
+            <objects>
+                <tableViewController id="pKD-Nd-s6a" customClass="TableViewController" customModule="FetchFromFile" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="mHW-tv-JXY">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="reuseIdentifier" textLabel="8cy-Oa-9EU" detailTextLabel="OTr-ks-mBK" style="IBUITableViewCellStyleSubtitle" id="9cy-pO-V7U">
+                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="9cy-pO-V7U" id="Gfp-38-t7V">
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="8cy-Oa-9EU">
+                                            <rect key="frame" x="16" y="5" width="33.5" height="20.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="OTr-ks-mBK">
+                                            <rect key="frame" x="16" y="25.5" width="44" height="14.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                            <nil key="textColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="pKD-Nd-s6a" id="tfe-ZK-LPl"/>
+                            <outlet property="delegate" destination="pKD-Nd-s6a" id="KMa-9F-lre"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Details" id="dYH-hX-7TA"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wzS-7Z-ylq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1498" y="134"/>
         </scene>
     </scenes>
 </document>
